docs for get categories and products add
